adjust form-1 and add form-2

--- a/form1/index.html
+++ b/form1/index.html
@@ -33,14 +33,16 @@
             <div class="fielset-wrapper">
                 <legend>Informações pessoais</legend>
 
-                <div class="input-wrapper">
-                  <label for="name">Name</label>
-                  <input type="text" id="name" required/>
-                </div>
+                <div class="col-1">
+                  <div class="input-wrapper">
+                    <label for="name">Name</label>
+                    <input type="text" id="name"/>
+                  </div>
 
-                <div class="input-wrapper"> 
-                    <label for="last-name">Sobrenome</label>
-                    <input type="text" />
+                  <div class="input-wrapper"> 
+                      <label for="last-name">Sobrenome</label>
+                      <input type="text" />
+                  </div>
                 </div>
       
                 <div class="input-wrapper">
